<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/lang"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/oromo"
                    android:orderInCategory="100"
                    android:title="@string/afaan_oromo"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/english"
                    android:orderInCategory="100"
                    android:title="@string/english"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/amharic"
                    android:orderInCategory="100"
                    android:title="@string/amharic"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/muzhaf"
                    android:orderInCategory="100"
                    android:title="@string/muzhaf"
                    app:showAsAction="never" />
            </group>
        </menu>

    </item>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>
